Remove deprecated StepResult methods.
https://github.com/danielgmyers/flux-swf-client/issues/69